[java-dfa] Extract JvmDataFlowInterpreter from StandardDataFlowRunner
GitOrigin-RevId: 540f7e257819a7e5a3af5074cb994dcf83a57374